--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -28,14 +28,14 @@
             <div class="col-md-4"></div>
             <div class="col-md-4">
                 <h1 style="padding: 20px; text-align: center; color: azure;">Log In</h1>
-                <form style="color: azure;" onsubmit="return validateForm()">
+                <form style="color: azure;" method="post" onsubmit="return validateForm()">
                     <div class="form-group">
                         <label for="mail">Email address</label>
-                        <input type="email" class="form-control" id="mail" aria-describedby="emailHelp" placeholder="Enter email" required>
+                        <input type="email" class="form-control" name="email" id="mail" aria-describedby="emailHelp" placeholder="Enter email" required>
                     </div>
                     <div class="form-group">
                         <label for="pwd">Password</label>
-                        <input type="password" class="form-control" id="pwd" placeholder="Password" required>
+                        <input type="password" class="form-control" name="password" id="pwd" placeholder="Password" required>
                     </div>
                     <div class="form-group">
                         <div class="form-check">
@@ -43,7 +43,7 @@
                             <label class="form-check-label" for="exampleCheck1">Remember me</label>
                         </div>
                     </div>
-                    <button type="submit" class="btn btn-primary btn-block" formaction="/">Log-in</button>
+                    <button type="submit" class="btn btn-primary btn-block" formaction="/login/submit">Log-in</button>
                     <div class="form-group">
                         <p class="message">Not yet registered? <a href="/createaccount">Create an account</a></p>
                     </div>
